Update css finished

--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
         <section class="summary">
             <h2>Summary</h2>
 
-            <div class="summary-item__reaction">
+            <div class="summary-item reaction">
                 <img src="assets/images/icon-reaction.svg" alt="Reaction">
                 <span class="category">Reaction</span>
                 <span class="score">80 <span class="out-of">/ 100</span></span>
             </div>
 
-            <div class="summary-item__memory">
+            <div class="summary-item memory">
                 <img src="assets/images/icon-memory.svg" alt="Memory">
                 <span class="category">Memory</span>
                 <span class="score"> 92 <span class="out-of">/ 100</span></span>
             </div>
 
-            <div class="summary-item__verbal">
+            <div class="summary-item verbal">
                 <img src="assets/images/icon-verbal.svg" alt="Verbal">
                 <span class="category">Verbal</span>
                 <span class="score"> 61 <span class="out-of">/ 100</span></span>
             </div>
 
-            <div class="summary-item__visual">
+            <div class="summary-item visual">
                 <img src="assets/images/icon-visual.svg" alt="Visual">
                 <span class="category">Visual</span>
                 <span class="score"> 72 <span class="out-of">/ 100</span></span>
